# 2D_Obsterkennung

./: .gitignore  bg_ai.py  data.csv  decisionTree.py  eval.py  k-means-clustering.py  main.py  pyproject.toml  remove_background.py  statistic.py  test.py  test_delete.py  testtestDlete.py  texture.py  train_test_split.py
c_optimized/: color.c  color.h  example.py  index.html  main  main.c  optimized_lib.py  remove_bg.c  remove_bg.h  texture.c  texture.h
datasets/: color_data.json  lbp.json  stat.json
