[project]
name = "2d-obsterkennung"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
    "debugpy>=1.8.14",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
]
